# secret-santa-api

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  pytest.yml
app/: config.py  db.py  main.py  models.py  schemas.py
app/models/: blacklist.py  participant.py  secretsantalist.py
app/routers/: blacklists.py  draw.py  lists.py  participants.py
app/schemas/: blacklist.py  participant.py
app/utils/: list_utils.py
data/: database.db
tests/: test_main.py  tests_main.py
tests/tests_models/: test_model_blacklist.py  test_model_participant.py  test_model_secretsantalist.py  test_participant.py
tests/tests_route/: test_blacklist.py  test_draw.py  test_participants.py
tests/tests_routers/: test_blacklist.py  test_draw.py  test_lists.py  test_participants.py
tools/black-linter/: Dockerfile
