[tool.poetry]
name = "secret-santa-api"
version = "0.1.0"
description = "A RESTful API for managing Secret Santa with blacklist functionality."
readme = "README.md"
authors = ["lucas"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
sqlmodel = "^0.0.8"
uvicorn = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
httpx = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


